--- a/explorer formulario mentoria/index.html
+++ b/explorer formulario mentoria/index.html
@@ -71,19 +71,22 @@
         <div class="fieldset-wrapper">
           <legend>Seus horários disponíveis</legend>
 
-          <div class="firstdate"> 
+          <div class="firstdate">
   
             <div class="input-wrapper">
+              <label id="label1" for="">primeira mentoria</label>
               <label for="firstdate">Data <span>(DD/MM/AAA)</span></label>
               <input type="date" id="firstdate" />
             </div>
 
             <div class="input-wrapper">
+              <label  for=""></label> <br>
               <label for="begintime">Das</label>
               <input type="time" id="begintime" />
             </div>
 
             <div class="input-wrapper">
+              <label for=""></label> <br>
               <label for="endtime">Até</label>
               <input type="time" id="endtime" />
             </div>
@@ -91,31 +94,36 @@
 
           <div class="seconddate"> 
               <div class="input-wrapper">
+                <label id="label2" for="">segunda mentoria</label>
                 <label for="seconddate">Data <span>(DD/MM/AAA)</span></label>
                 <input type="date" id="seconddate" />
               </div>
   
               <div class="input-wrapper">
-                <label for="begintime">Das</label>
-                <input type="time" id="begintime" />
+                <label for=""></label> <br>
+                <label for="begintime2">Das</label>
+                <input type="time" id="begintime2" />
               </div>
   
               <div class="input-wrapper">
-                <label for="endtime">Até</label>
-                <input type="time" id="endtime" />
+                <label for=""></label> <br>
+                <label for="endtime2">Até</label>
+                <input type="time" id="endtime2" />
           </div> 
-
-
 
         </div>
       </fieldset>
 
-      
-
-
     </form>
 
+    <footer>
+      <button
+        class="button" 
+        form="my-form">
+        Salvar
+      </button>
 
+    </footer>
 
   </div>
 
